# localLibrary

./: .gitignore  .pre-commit-config.yaml  CaddyFile  Dockerfile  Dockerfile.prod  README.md  compose.prod.yaml  compose.yaml  pyproject.toml
.github/workflows/: ci-cd.yaml  ci.yaml
locallibrary/: mypy.ini
locallibrary/catalog/: __init__.py  admin.py  apps.py  choices.py  forms.py  managers.py  models.py  services.py  signals.py  urls.py  validators.py  views.py
locallibrary/catalog/api/:  pagination.py  filters.py  permissions.py  urls.py  views.py
locallibrary/catalog/api/serializers/: __init__.py  author.py  book.py  book_instance.py  genre.py  language.py  loan.py
locallibrary/catalog/api/tests/: conftest.py  test_filters.py  test_permissions.py
locallibrary/catalog/management/commands/: seed_db.py
locallibrary/catalog/migrations/: 0001_initial.py  0002_initial.py  0002_language.py  0003_alter_author_id_alter_book_id_alter_genre_id_and_more.py  0003_book_language.py  0003_remove_book_language_bookinstance_language.py  0004_alter_bookinstance_due_back_and_more.py  0004_remove_book_language_book_language.py  0004_remove_bookinstance_language_book_language.py  0005_alter_book_language.py  0005_remove_author_author_photo_remove_book_book_photo.py  0006_author_author_photo_book_book_photo.py  0006_language_language_name_case_insensitive_unique.py  0007_bookinstance_borrower.py  0007_rename_author_photo_author_photo_and_more.py  0008_alter_author_photo_alter_book_photo_and_more.py  0008_alter_bookinstance_options.py  0009_alter_author_id_alter_book_id_alter_genre_id_and_more.py  0009_loan_alter_book_author_alter_book_language_and_more.py  0010_alter_bookinstance_options_and_more.py  0011_rename_photo_author_image_rename_photo_book_image.py  0012_alter_bookinstance_options_remove_loan_is_overdue_and_more.py
locallibrary/catalog/static/css/: styles.css
locallibrary/catalog/tasks/: image_tasks.py  notification_tasks.py  periodic_tasks.py
locallibrary/catalog/templates/: base_generic.html  index.html
locallibrary/catalog/templates/catalog/: author_confirm_delete.html  author_detail.html  author_form.html  author_list.html  book_borrow_reserved.html  book_confirm_delete.html  book_detail.html  book_form.html  book_list.html  book_renew_librarian.html  bookinstance_form.html  bookinstance_list_borrowed.html  bookinstance_list_borrowed_user.html
locallibrary/catalog/tests/: factories.py  test_forms.py  test_managers.py  test_models.py  test_service.py  test_services.py  test_signals.py  test_views.py
locallibrary/catalog/tests/helper/: factories.py  mixins.py
locallibrary/catalog/tests/tasks/: test_image_tasks.py  test_notification_tasks.py  test_periodic_tasks.py
locallibrary/catalog/tests/tests_views/: test_author_views.py  test_book_views.py  test_bookinstance_views.py  test_index_view.py
locallibrary/catalog/tests/views/: test_author_views.py  (+3 more)
locallibrary/common/: cache.py  image.py  mixins.py  pagination.py  permissions.py  tasks.py  utils.py  validators.py
locallibrary/common/file/: mixins.py  utils.py
locallibrary/common/tests/: test_cache.py  test_image.py  test_mixins.py  test_pagination.py  test_permissions.py  test_tasks.py  test_validators.py
locallibrary/helpers/cloudflare/: settings.py  storages.py
locallibrary/infrastructure/: celery.py
locallibrary/locallibrary/: __init__.py  celery.py  celery_app.py  settings.py  test_settings.py  urls.py
locallibrary/user/: adapters.py  admin.py  apps.py  choices.py  forms.py  managers.py  models.py  signals.py  urls.py  validators.py  views.py
locallibrary/user/api/: serializers.py  urls.py  views.py
locallibrary/user/migrations/: 0001_initial.py  0002_alter_customuser_id_alter_userprofile_id.py  0003_remove_userprofile_email_verified_at.py  0004_remove_userprofile_profile_picture.py  0005_userprofile_profile_picture.py  0006_alter_userprofile_profile_picture.py  0007_alter_userprofile_role.py
locallibrary/user/tasks/: profile_picture_tasks.py
locallibrary/user/tests/: test_adapters.py  test_forms.py  test_managers.py  test_models.py  test_signals.py  test_tasks.py  test_views.py
locallibrary/utils/: cache.py  choices.py  image_proccess.py  image_processing.py  permissions.py  validators.py
(+44 files in other folders)
