[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = 'local-library'
description = "You can borrow your desirable books here!"

version = '2026.0.0'

requires-python = ">= 3.12"
dependencies = [
    "celery>=5.6.3",
    "crispy-bootstrap5>=2026.3",
    "dj-rest-auth>=7.2.0",
    "django>=6.0.3",
    "django-allauth>=65.15.0",
    "django-crispy-forms>=2.6",
    "django-filter>=25.2",
    "django-redis>=6.0.0",
    "django-storages[boto3]>=1.14.6",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-spectacular>=0.29.0",
    "gunicorn>=25.1.0",
    "pillow>=12.1.1",
    "psycopg[binary]>=3.3.3",
    "pyjwt[crypto]>=2.12.1",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "bandit>=1.8.3",
    "boto3-stubs>=1.43.14",
    "botocore-stubs>=1.42.41",
    "celery-types>=0.26.0",
    "django-silk>=5.5.0",
    "django-stubs>=5.1.3",
    "djangorestframework-stubs>=3.17.0",
    "factory-boy>=3.3.3",
    "faker>=40.11.1",
    "mypy>=1.15.0,<2.0.0",
    "pytest-cov>=7.1.0",
    "pytest-django>=4.12.0",
    "pytest-factoryboy>=2.8.1",
    "pytest-xdist>=3.5.0",
    "requests>=2.34.2",
    "ruff>=0.15.7",
]

[tool.hatch.build.targets.wheel]
packages = ["locallibrary"]


[tool.ruff]

line-length = 108
target-version = "py312"

exclude = [".venv", "migrations", ".git"]

lint.select = ["E", "F", "I", "UP", "DJ"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "locallibrary.test_settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
pythonpath = ["locallibrary"]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
mypy_path = "locallibrary"

[[tool.mypy.overrides]]
module = [
    "django_filters.*",
    "allauth.*",
    "celery.*",
    "rest_framework.*"
]
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "locallibrary.settings"
